--- a/wp-content/themes/twentysixteen-child/style.css
+++ b/wp-content/themes/twentysixteen-child/style.css
@@ -27,6 +27,13 @@
     
     visibility:hidden;
 }
+
+#masthead{
+    padding-top:0px; 
+    padding-bottom:0px;
+    
+    
+}
 #post-29{
     
     height:455px;
@@ -35,6 +42,31 @@
 #menu-item-42 a{
     
     background-color:#f9da0c;
+    
+}
+
+.home-text{
+    
+    font-size:1.5em;
+    color:#fff;
+    
+    
+}
+.border{
+    padding:11px;
+    border-bottom-style:solid;
+    border-bottom-width:.5px;
+    border-spacing:3px;
+}
+
+
+.content-column.one_third{
+    
+    color:#fff;
+    border-left-style:solid;
+    border-left-width:.5px;
+    border-right-style:solid;
+    border-right-width:.5px;
     
 }
 
