--- a/wp-content/themes/html5blank-stable/workshops.css
+++ b/wp-content/themes/html5blank-stable/workshops.css
@@ -32,9 +32,37 @@ header{
     margin:0 auto;
     width:100%;
     height:15rem;  
-    display:block;
     background-color:#7a1501;
  
+}
+.nav{
+    
+    font-size:2.5em;
+    color:#fff;
+    text-decoration:none;
+    
+}
+.menu{
+    
+    text-decoration:none;
+    margin:0 auto;
+    color:#fff;
+    display:inline-block;
+    
+    
+}
+.page_item{
+    
+    display:inline-block;
+    text-decoration:none;
+    
+    
+}
+ul li a{
+    padding:.5em;
+    text-decoration:none;
+    text-transform:uppercase;
+    color:#fff;
 }
 
 .logo{
