--- a/wp-content/themes/html5blank-stable/about.css
+++ b/wp-content/themes/html5blank-stable/about.css
@@ -13,6 +13,16 @@ html, body{
     padding:0;
     font-size:67.5%;
 }
+#imag{
+    
+    float:left;
+}
+
+.nav{
+    
+    
+    
+}
 
 body{
     
@@ -31,6 +41,12 @@ header{
     height:28rem;  
     display:block;
     background-color:white;
+}
+#own{
+    margin:0 auto;
+    float:left;
+    padding-left:6em;
+    transform:translateY(-20.5em);
 }
 
 #header{
@@ -53,7 +69,6 @@ header{
 }
 
 nav{
-    
     
     display:block;
     margin:0 auto;
@@ -102,18 +117,18 @@ a:hover{
 /*}*/
 #active_about a{
     color:#7a1501;
+    
 }
 #active > a{
     
     display:block;
-    height:4rem;
-    width:7.5rem;
-    padding:1%;
+    height:6rem;
+    width:7.5em;
     background-color:#f9da0c;
     margin-left:53rem;
-    transform:translateY(4em);
-    line-height:4rem;
-    font-size:1.82rem;
+    transform:translateY(13em);
+    line-height:2em;
+    font-size:18px;
     color:#7a1501;
  
 }
@@ -123,6 +138,16 @@ a:hover{
     height:25rem;
     float:left;
     
+}
+
+
+
+
+
+
+span h1{
+    
+    transform:translateY(5em);
 }
 
 h1{
@@ -150,7 +175,7 @@ section{
 }
 #columnLeft{
     margin:0 auto;
-    width:calc(85%/2);
+    width:calc(100%/2);
     float:left;
     padding:6em;
     text-align:left;
@@ -160,7 +185,7 @@ section{
 #columnRight{
     margin:0 auto;
     text-align:left;
-    width:calc(85%/2);
+    width:calc(100%/2);
     height:auto;
     padding:6em;
     float:right;
