--- a/wp-content/themes/html5blank-stable/workshops.css
+++ b/wp-content/themes/html5blank-stable/workshops.css
@@ -1,3 +1,4 @@
+/* global box-sizing */
 *,
 *:after,
 *:before {
@@ -7,6 +8,8 @@
 	font-smoothing:antialiased;
 	text-rendering:optimizeLegibility;
 }
+/* html element 62.5% font-size for REM use */
+
 
 
 html, body{
@@ -32,37 +35,9 @@ header{
     margin:0 auto;
     width:100%;
     height:15rem;  
+    display:block;
     background-color:#7a1501;
  
-}
-.nav{
-    
-    font-size:2.5em;
-    color:#fff;
-    text-decoration:none;
-    
-}
-.menu{
-    
-    text-decoration:none;
-    margin:0 auto;
-    color:#fff;
-    display:inline-block;
-    
-    
-}
-.page_item{
-    
-    display:inline-block;
-    text-decoration:none;
-    
-    
-}
-ul li a{
-    padding:.5em;
-    text-decoration:none;
-    text-transform:uppercase;
-    color:#fff;
 }
 
 .logo{
@@ -79,10 +54,12 @@ ul li a{
 
 .parent{
     
+    margin:0 auto;
     border-color:#f9da0c;
     display:flex;
-    justify-content:space-between;
-    width:97em;
+    justify-content:space-around;
+    transform:translateX(8em);
+    
 }
 
 .item{
@@ -144,6 +121,13 @@ p > em{
 /*HEADER ENDS HERE*/
 
 /*RESOLVE ISSUE WITH WIDTH, main text was at 100% reduced to 72%*/
+
+#call{
+    margin:0 auto;
+    width:36%;
+    font-size:13.5px;
+    float:left;
+}
 
 main{
     
@@ -263,4 +247,116 @@ b{
     float:right;
     text-align:right;
     visibility:hidden;
+}
+footer{
+    
+    margin:0 auto;
+    width:25%;
+    height:50%;
+    font-size:2rem;
+    background-color:yellow;
+    transform:translateY(1em);
+}
+
+h3{
+    color:black;
+    margin:0 auto;
+    height:3em;
+    text-transform:uppercase
+}
+h3:hover{
+    color:black;
+}
+
+/*OWL LOGO IMAGE HERE*/
+
+
+#owl img{
+    float:right;
+    position:relative;
+
+}
+
+
+/*COMMENCE MEDIA HERE*/
+
+
+@media only screen and (max-width:1021px){
+    .parent{
+        margin-left:300px;
+        
+    }
+    checkbox{
+        
+    }
+    #bars{
+        visibility:hidden;
+    }
+}
+@media only screen and (max-width:900px){
+    .parent{
+        display:none;
+    }
+    .logo{
+        visibility:hidden;
+    }
+    .fa{
+        width:12rem;
+        height: 5rem;
+        visibility:visible;
+        color:gray;
+    }
+  
+    .list{
+    width:200px;
+    height:auto;
+    font-size:28px;
+    border: lightgrey solid .1rem;
+    border-radius:.5rem;
+    padding-left:10px;
+    padding-right:10px;
+    
+        
+    }
+    nav{
+        display:none;
+    }
+    topbar{
+        display:none;
+    }
+    
+    #bars{
+        display:none;
+    }
+    
+    #bars:checked~#topbar{
+    display:block;
+    visibility:visible;
+   
+}
+    #ch{
+        
+        display:none;
+    }
+   
+    li{
+        text-align:left;
+        width:100px;
+        color:black;
+        
+    }
+    nav{
+        
+        visibility:hidden;
+    }
+
+    .lines{
+        margin-left:250px;
+    }
+
+#owl{
+    margin:0 auto;
+    display:block;
+    float:right;
+    
 }
