--- a/wp-content/themes/html5blank-stable/cohort.css
+++ b/wp-content/themes/html5blank-stable/cohort.css
@@ -26,12 +26,12 @@ body{
     text-align:center;
     font-family:sans-serif;
 }
-header{
+.header{
     margin:0 auto;
     width:100%;
     height:17.5rem;  
     display:block;
-    background-color:white; 
+    background-color:#fff; 
 }
 #img_logo{
     float:right;
@@ -39,22 +39,22 @@ header{
     transform:translateY(-8rem);
     
 }
-.logo a img{
+.logo{
     
     margin:0 auto;
     display:block;
     float:left;
-    padding-left:35em;
-    transform:translateY(3em);
+    padding-left:25em;
+    transform:translateY(-6.9em);
 }
 
-nav{
+.nav{
     
     display:block;
     margin:0 auto;
     display:block;
-    transform:translateX(-9em);
-    background-color:white;
+    transform:translateX(22em);
+    
 
     
 }
@@ -63,6 +63,7 @@ ul{
     display:inline;
     margin:0 auto;
     width:80%;
+    
     font-size:4rem;
 }
  ul li{
