update nav styles on courses page

--- a/wp-content/themes/html5blank-stable/courses.css
+++ b/wp-content/themes/html5blank-stable/courses.css
@@ -82,7 +82,7 @@ body{
     text-align:center;
     line-height:3em;
     transform:translateX(13em);
-    /*transform:translateY(-1.3em)*/
+  
 }
 
 ul{
@@ -168,17 +168,26 @@ a:hover{
     transform:translateX(3.4em);
     
 }
-/*main p{*/
-    
-/*    width:70%;*/
-/*    margin:0 auto;*/
-/*    background-color:#fff;*/
-/*    font-size:3em;*/
-/*}*/
 
+#menu-item-162{
+    
+   
+    background-color:#f9da0c;
+    
+}
+#menu-item-162 a{
+    
+    color:#7a1501;
+    
+}
+#menu-item-163 a{
+    
+    color:#f9da0c;
+    
+}
 .btn{
-    width:3em;
-    background-color:yellow;
+    width:4em;
+    background-color:#f9da0c;
 }
 
 #topic{
