--- a/wp-content/themes/html5blank-stable/signup.css
+++ b/wp-content/themes/html5blank-stable/signup.css
@@ -54,6 +54,34 @@ header{
     font-size:1.5rem;
     border-bottom:dotted .03em;
 }
+.courses{
+    
+    margin:0 auto;
+    font-size:16px;
+    display:block;
+    padding:1em;
+    width:27%;
+    background-color:#fff;
+    
+    
+}
+
+    
+.title{
+    
+    margin:0 auto;
+    font-size:16px;
+    display:block;
+    padding:1em;
+    width:27%;
+    background-color:#fff;
+    
+    
+}
+    
+    
+    
+}
 
 a{
     width:100%;
