--- a/wp-content/themes/html5blank-stable/about.css
+++ b/wp-content/themes/html5blank-stable/about.css
@@ -11,7 +11,7 @@ html, body{
     
     margin:0 auto;
     padding:0;
-    font-size:67.5%;
+    font-size:12px;
 }
 #imag{
     transform:translateY(-8em);
