styled nav home page

--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -34,8 +34,10 @@ header{
 }
 .nav{
     
+    display:block;
     margin:0 auto;
-    text-align:center;
+    float:right;
+    transform:translateX(-22em);
     
 }
 
