--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -130,6 +130,7 @@ h3{
     font-size:2.0em;
     font-weight:100;
     text-align:center;
+    padding-bottom:1em;
     margin:0 auto;
     width:59%;
     border-bottom: solid white .5px; 
@@ -144,23 +145,32 @@ h3{
     height:400px;
     background-color:#7A1501; 
 }
+.wp-image-181{
+     border-right:solid white .5px;
+     padding-right:7em;
+}
 .wp-image-182{
+    padding:3em;
+    transform:translateY(-3.3em);
+}
+.wp-image-180{
+    
+    
     border-left:solid white .5px;
-    border-right:solid white .5px;
-    padding:1em;
+    padding-left:9em;
     
     
 }
 
 .info-box{
     position:relative;
-    top:50px;
+    top:30px;
     display:block;
     color:white;
     float:left;
     text-transform:uppercase;
     transform:translateX(10em);
-    width:calc(65%/3);
+    width:calc(55%/3);
 }
 
 /*.center{*/
