--- a/wp-content/themes/html5blank-stable/about.css
+++ b/wp-content/themes/html5blank-stable/about.css
@@ -46,7 +46,7 @@ header{
     margin:0 auto;
     float:left;
     padding-left:6em;
-    transform:translateY(-20.5em);
+    transform:translateY(-12.5em);
 }
 
 #header{
@@ -59,9 +59,9 @@ header{
 .logo{
     
     display:block;
-    margin:1%;
     margin-left:2rem;
     padding-left:10rem;
+    transform:translateY(4em);
     width:5rem;
     height:2rem;
     float:left;
@@ -122,13 +122,15 @@ a:hover{
 #active > a{
     
     display:block;
-    height:6rem;
-    width:7.5em;
+    height:4.2rem;
+    width:7em;
     background-color:#f9da0c;
     margin-left:53rem;
-    transform:translateY(13em);
+    padding:14px 12px 14px 12px;
+    transform:translateY(18em);
     line-height:2em;
-    font-size:18px;
+    font-size:12px;
+    font-weight:700;
     color:#7a1501;
  
 }
@@ -140,26 +142,26 @@ a:hover{
     
 }
 
-
-
-
-
-
 span h1{
     
-    transform:translateY(5em);
-}
-
-h1{
     margin:0 auto;
     float:right;
     font-size:3em;
-    width:33rem;
-    transform:translateY(-2rem);
+    width:30%;
+    height:10%;
+    transform:translateY(1em);
 }
 
+/*h1{*/
+/*    margin:0 auto;*/
+/*    float:right;*/
+/*    font-size:3em;*/
+/*    width:33rem;*/
+/*    transform:translateY(2rem);*/
+/*}*/
+
 main{
-    height:80rem;
+    height:90em;
     width:100%;
     padding:3em;
     background-color:#7a1501;
