--- a/wp-content/themes/html5blank-stable/about.css
+++ b/wp-content/themes/html5blank-stable/about.css
@@ -105,16 +105,7 @@ a:hover{
     transition:background 2s;
     
 }
-/*.active_team a{*/
-/*    color:#7a1501;*/
-/*}*/
-/*.active a{*/
-    
-/*    color:#7a1501;*/
-/*    height:4rem;*/
-/*    background-color:#f9da0c;*/
-    
-/*}*/
+
 #active_about a{
     color:#7a1501;
     
@@ -160,34 +151,43 @@ span h1{
 /*    transform:translateY(2rem);*/
 /*}*/
 
-main{
-    height:90em;
-    width:100%;
-    padding:3em;
-    background-color:#7a1501;
-}
-
-section{
-    display:block;
-    text-align:center;
-    margin:0 auto;
-    width:100%;
-    height:80rem;
+/*#main_section{*/
+/*    height:90em;*/
+/*    width:100%;*/
+/*    padding:3em;*/
+/*    background-color:#7a1501;*/
+/*}*/
+.col-xs-12{
+    
+    color:#fff;
+    width:calc(100%/2);
+    font-size:12px;
+    font-weight:700;
     
 }
-#columnLeft{
+
+
+/*section{*/
+/*    display:block;*/
+/*    text-align:center;*/
+/*    margin:0 auto;*/
+/*    width:100%;*/
+/*    height:80rem;*/
+    
+/*}*/
+.left-side{
     margin:0 auto;
-    width:calc(100%/2);
+    width:100%;
     float:left;
     padding:6em;
     text-align:left;
     display:block;
-    font-size:1em;
+    font-size:1.5em;
 }
-#columnRight{
+.right-side{
     margin:0 auto;
     text-align:left;
-    width:calc(100%/2);
+    width:100%;
     height:auto;
     padding:6em;
     float:right;
@@ -199,38 +199,38 @@ section{
 /*MAIN TEXT STARTS HERE*/
 
 
-h2{
-    color:#fff;
-    font-size:2rem;
-    font-weight:800;
-}
-p{
-    margin:0 auto;
-    display:block;
-    color:white;
-    font-size: 1.9rem
-}
-#p{
-    margin:0 auto;
-    display:block;
-    color:white;
-    font-size: 2rem
-}
-h3>#ask{
+/*h2{*/
+/*    color:#fff;*/
+/*    font-size:2rem;*/
+/*    font-weight:800;*/
+/*}*/
+/*p{*/
+/*    margin:0 auto;*/
+/*    display:block;*/
+/*    color:white;*/
+/*    font-size: 1.9rem*/
+/*}*/
+/*#p{*/
+/*    margin:0 auto;*/
+/*    display:block;*/
+/*    color:white;*/
+/*    font-size: 2rem*/
+/*}*/
+/*h3>#ask{*/
     
-    font-size:4rem;
-}
-footer{
-    width:100%;
-    margin:0 auto;
-    height:3rem;
-    background-color:#f9da0c; 
-}
-em{
-    color:#7a1501;
-    font-size:2rem;
-    text-transform:uppercase
-}
+/*    font-size:4rem;*/
+/*}*/
+/*footer{*/
+/*    width:100%;*/
+/*    margin:0 auto;*/
+/*    height:3rem;*/
+/*    background-color:#f9da0c; */
+/*}*/
+/*em{*/
+/*    color:#7a1501;*/
+/*    font-size:2rem;*/
+/*    text-transform:uppercase*/
+/*}*/
 
 /*COMMENCE MEDIA */
 
