--- a/wp-content/themes/html5blank-stable/courses.css
+++ b/wp-content/themes/html5blank-stable/courses.css
@@ -48,8 +48,10 @@ body{
 
 #paragraph{
     
-    font-size:16px;
-    width:70%;
+    display:block;
+    margin:0 auto;
+    font-size:13px;
+    width:75%
     
 }
 
