--- a/wp-content/themes/html5blank-stable/workshops.css
+++ b/wp-content/themes/html5blank-stable/workshops.css
@@ -59,24 +59,15 @@ header{
     
 }
 
-.nav{
-    
-    margin:0 auto;
-    display:block;
-    
-    
-}
 .nav ul{
     
     display:inline-block;
     margin:0 auto;
     
-    
 }
 .nav ul li{
     
     display:inline-block;
-    
     
     
 }
@@ -89,30 +80,8 @@ header{
     font-weight:600;
 }
 
-.block-title{
-   
-    font-size:16px;
-    display:block;
-    text-align:left;
-    font-weight:bold;
-    border-bottom:1px solid #afafaf;
-    width:100%;
-    
-    
-    
-}
 .section{
     float:left;
-}
-
-.parent{
-    
-    margin:0 auto;
-    border-color:#f9da0c;
-    display:flex;
-    justify-content:space-around;
-    transform:translateX(8em);
-    
 }
 
 .item{
@@ -146,12 +115,22 @@ header{
     
     
 }
-.block-title{
+.section{
     
-     color:#fff;
-     font-size:16px;
-     transform:translateX(8em);
+     text-align:left;
+     
+  
+}
+.heading{
     
+     font-weight:bold;
+     display:block;
+     text-transform:uppercase;
+     font-size:2em;
+     float:left;
+      border-bottom:1px solid #afafaf;
+     padding-bottom:8px;
+     margin-bottom:8px;
     
 }
 
