--- a/wp-content/themes/html5blank-stable/contact.css
+++ b/wp-content/themes/html5blank-stable/contact.css
@@ -8,13 +8,6 @@
 	text-rendering:optimizeLegibility;
 }
 
-
-
-
-
-
-
-
 html, body{
     margin:0 auto;
     padding:0;
@@ -22,7 +15,6 @@ html, body{
 }
 
 body{
-    height:auto;
     box-sizing:border-box;
     margin:0;
     background-color:snow;
@@ -30,22 +22,24 @@ body{
     font-family:sans-serif;
    
 }
+
 header{
     margin:0 auto;
     width:100%;
-    height:6.5rem;  
+    height: 8.3em;  
     display:block;
     background-color:#7a1501;
  
 }
+
 main{
     margin:0 auto;
-    width:100%;
-    height:100%;
-    display:block;
+    background-size:cover;
+    
 }
-    #background{
-        background-repeat: no-repeat;
+
+#background{
+        background-size:cover;
         width:100%;
         height:100%;
 }
@@ -62,7 +56,7 @@ main{
     margin:0 auto;
     display:block;
     width:23%;
-  transform:translateY(-40rem);
+    transform:translateY(-38rem);
 
 }
 
@@ -93,11 +87,22 @@ main{
     transform:translateX(-3em);
     
 }
+
 #imag{
     width:14rem;
     float:right;
 }
-nav{
+
+#terry a{
+    
+    font-size:12px;
+    color:#7a1501;
+    text-transform:lowercase;
+    
+    
+}
+
+.nav{
     
     width:70%;
     display:block;
@@ -211,10 +216,11 @@ h2{
 #bitwise{
     
     width:14.7em;
+    height:11em;
     font-size:12px;
     display:block;
     margin:0 auto;
-    padding:1.5em;
+    padding:1.1em;
     background-color:#fff;
     transform:translateY(-.5em);
     
@@ -227,10 +233,7 @@ h2{
 
 
 .background_image{
-    
-    
-    transform:translateY(-69em);
-    
+    transform:translateY(-64em);
 }
 
 #second{
